Remove top margin and add height to header instead to avoid clipping with transparent banner

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,10 +1,9 @@
 header {
-  margin-top: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400px;
+  height: 520px;
   width: 100%;
   background-color: #d68b00;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
